      \item \code{compassRose1()} and \code{compassRose2()} respectively renamed \code{compassRoseCardinal()} and \code{compassRose()}.
      \item Rotation is now properly handled in \code{compassRose()}, there was a mispelled assignation: \code{< -} instead of \code{<-}.
      \item \code{layout2()} renamed \code{interactiveLayout()} to better reflect what it does.
    }
    \item Changes in the package's structure:
    \itemize{
      \item Rcpp added see \ghpr{10}.
    }
    \item Changes in the package's metadata:
    \itemize{
      \item DESCRIPTION now includes authors' ORCID.
      \item a LICENSE has been added.
    }

  }
}

\section{Changes in graphicsutils version 1.1-2}{
  \itemize{
    \item Addition of R functions:
    \itemize{
      \item \code{howManyRC()} compute the number of rows and columns to split a graphic window into panels as equally as possible.
      \item \code{image2()} an alternative \code{image}
    }
    \item Changes in existing R functions:
    \itemize{
      \item Color palettes added through \code{gpuPalette()}, this adresses \ghit{#5}.
      \item \code{getIcon.R} has been removed as recommended in \ghit{9}.
      \item \code{showPalette()} now displays the first colors of the palette properly.
      \item \code{showPalette()} shows the colors from palette() by default.
      \item \code{showPalette()} now adds only one line when displaying the hex color code and tune the color according to the background.
      \item Must of functions that creates new plots now ends by \code{invisible(NULL)}.
      \item \code{graphicsutils.R} has been renamed \code{zzz.R} and introduce a
      startup message including the version of the package.
      \item \code{pickColors()} has been reviewed to adress \ghit{3}.
      \item \code{plot0()} properly handle matrix of coordinates.
      \item New argument \code{text} in \code{plot0()} to add centered text in the plot region.
    }
    \item Changes in the package structure:
    \itemize{