@@ -33,7 +33,7 @@ polarPlot <- function(seqtime, seqval = NULL, rad = 1, from = 0, to = 2 * pi, in
     labelc = NULL, tckcol = 1, atc = NULL, labelr = NULL, atr = NULL, clockwise = TRUE, 
     n_signif = 2, add = FALSE, ...) {
     
-    ## --- format checking
+    # format checking
     seqtime <- as.matrix(seqtime)
     if (ncol(seqtime) > 1L) {
         seqval <- seqtime[, -1L]
@@ -41,11 +41,11 @@ polarPlot <- function(seqtime, seqval = NULL, rad = 1, from = 0, to = 2 * pi, in
     } else seqval <- as.matrix(seqval)
     stopifnot(length(seqtime) == length(seqval[]))
     if (from > to) 
-        stop("Error : from>to, to use counter-clockwise direction, use 'clockwise' argument !")
+        stop("Error: from>to, to use counter-clockwise direction, use 'clockwise' argument !")
     if (to > 2 * pi) 
-        warning("to>2*pi, it can generate unexpected outputs !", call = FALSE)
+        warning("to>2*pi, unexpected outputs migh be generated!", call = FALSE)
     
-    ## --- to polar coordinates
+    # to polar coordinates
     rgtime <- range(seqtime)
     rgval <- prettyRange(seqval)
     lgv <- floor(log(rgval[2L] - rgval[1L]))
@@ -56,20 +56,20 @@ polarPlot <- function(seqtime, seqval = NULL, rad = 1, from = 0, to = 2 * pi, in
         seqtp <- 2 * from - seqtp
     seqvp <- rad * (seqval - rgval[1L])/(rgval[2L] - rgval[1L])
     
-    ## --- plot
+    # plot
     if (!add) {
         graphics::par(mar = c(1, 1, 1, 1))
         graphics::plot.new()
         graphics::plot.window(1.2 * c(-1, 1), 1.2 * c(-1, 1), asp = 1)
     }
     
-    ## --- circles
-    for (i in rad/5 * seq_len(5 - 1)) circle(0, 0, rad * i, col = NA, lwd = 0.5 + 
+    # circles
+    for (i in rad/5 * seq_len(5 - 1)) circles(0, 0, rad * i, col = NA, lwd = 0.5 + 
         0.5 * i, lty = 2)
-    circle(0, 0, rad, lwd = 1, col = NA)
+    circles(0, 0, rad, lwd = 1, col = NA)
     graphics::points(0, 0, pch = 20, col = "grey45")
     
-    ## --- Lines
+    # lines
     graphics::polygon(c(0, seqvp * cos(seqtp), 0), c(0, seqvp * sin(seqtp), 0), ...)
     
     ## --- Points at start and end
@@ -78,7 +78,7 @@ polarPlot <- function(seqtime, seqval = NULL, rad = 1, from = 0, to = 2 * pi, in
     lv <- length(seqval)
     graphics::points(seqvp[lv] * cos(seqtp[lv]), seqvp[lv] * sin(seqtp[lv]), pch = 20)
     
-    ## --- Values labels
+    # values labels
     if (is.null(labelr)) 
         labelr <- round(seq(rgval[1L], rgval[2L], length.out = 6), digits = -lgv + 
             2)
@@ -87,13 +87,13 @@ polarPlot <- function(seqtime, seqval = NULL, rad = 1, from = 0, to = 2 * pi, in
             cex = 1.1, pos = 3)
     }
     
-    ## --- Circular ticks
+    # Circular ticks
     mangle <- -0.5 * pi + from + (0:6)/6 * (to - from)
     if (clockwise) 
         mangle <- 2 * from - mangle
     graphics::segments(cos(mangle), sin(mangle), 1.05 * cos(mangle), 1.05 * sin(mangle))
     
-    ## --- Circular values
+    # Circular values
     if (is.null(labelc)) 
         labelc <- grDevices::as.graphicsAnnot(signif(seq(rgtime[1L], rgtime[2L], 
             length.out = 7), n_signif)) else labelc <- grDevices::as.graphicsAnnot(labelc)
